[tool.poetry]
name = "promark-visualization"
version = "0.1.0"
description = ""
authors = ["tuhoag <hatu87@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
seaborn = "^0.13.2"
matplotlib = "^3.8.3"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
